read_more page with lorem ipsum

--- a/views/header_footer.pug
+++ b/views/header_footer.pug
@@ -6,7 +6,8 @@ block content
       div.inner
         h3.masthead-brand QooNet
         nav.nav.nav-masthead.justify-content-center
-          a.nav-link(href="#") Home
+          a.nav-link(href="/") Home
+          a.nav-link(href="read_more") Read More
           a.nav-link(href="#") Features
           a.nav-link(href="#") Contact
 
