--- a/views/read_more.pug
+++ b/views/read_more.pug
@@ -4,30 +4,47 @@ block main_content
   main(role="main")
     div.jumbotron.jumbotron-fluid
       div.container
-        h1.display-4 Digital control with Qoonet
-        p.lead Blah blah blah
-        
+        h1.display-4 Qoonet
+        p.lead An Open Source IoT Control System
+
     div.container.marketing
       div.row.featurette
         div.col-md-7
-          h2.featurette-heading First featurette heading. 
-            span.text-muted It'll blow your mind.
+          h2.featurette-heading Unlocking digital controls
           p.lead.
-            Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula 
-            porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque 
-            nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
+            While standard systems for digital control have gravitated towards 
+            levels of complexity that require more and more specialised expertise, 
+            a revolution has been taking place. The capability of the Internet of 
+            Things has moved from potential to reality.
+          p.lead.
+            This potential has been ignored by the controls community. Until now.
         div.col-md-5
-          img.featurette-image.img-fluid.mx-auto(data-src="holder.js/300x300/auto", alt="Generic placeholder image")
+          img.featurette-image.img-fluid.mx-auto(data-src="holder.js/400x400/auto", alt="Generic placeholder image")
 
       hr.featurette-divider
 
       div.row.featurette
         div.col-md-7.order-md-2
-          h2.featurette-heading Oh yeah, it's that good. 
-            span.text-muted See for yourself.
+          h2.featurette-heading Standing on the shoulders of giants
           p.lead.
-            Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula 
-            porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque 
-            nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
+            Business models that depend on contant vendor interaction lead to 
+            poor quality systems. Qoonet is 100% open source. The code is yours 
+            to modify and optimise to your needs, and is accessible enough to 
+            make this a reality.
         div.col-md-5
-          img.featurette-image.img-fluid.mx-auto(data-src="holder.js/300x300/auto", alt="Generic placeholder image")
+          img.featurette-image.img-fluid.mx-auto(data-src="holder.js/400x400/auto", alt="Generic placeholder image")
+      
+      hr.featurette-divider
+
+      div.row.featurette
+        div.col-md-7
+          h2.featurette-heading Unlocking digital controls
+          p.lead.
+            While standard systems for digital control have gravitated towards 
+            levels of complexity that require more and more specialised expertise, 
+            a revolution has been taking place. The capability of the Internet of 
+            Things has moved from potential to reality.
+          p.lead.
+            This potential has been ignored by the controls community. Until now.
+        div.col-md-5
+          img.featurette-image.img-fluid.mx-auto(data-src="holder.js/400x400/auto", alt="Generic placeholder image")
