--- a/views/read_more.pug
+++ b/views/read_more.pug
@@ -15,7 +15,7 @@ block main_content
             While standard systems for digital control have gravitated towards 
             levels of complexity that require more and more specialised expertise, 
             a revolution has been taking place. The capability of the Internet of 
-            Things has moved from potential to reality.
+            Things has moved from theory to reality.
           p.lead.
             This potential has been ignored by the controls community. Until now.
         div.col-md-5
@@ -38,13 +38,11 @@ block main_content
 
       div.row.featurette
         div.col-md-7
-          h2.featurette-heading Unlocking digital controls
+          h2.featurette-heading Real-time controls without overwhelming the system
           p.lead.
-            While standard systems for digital control have gravitated towards 
-            levels of complexity that require more and more specialised expertise, 
-            a revolution has been taking place. The capability of the Internet of 
-            Things has moved from potential to reality.
-          p.lead.
-            This potential has been ignored by the controls community. Until now.
+            With mobile control an expectation of modern systems, real-time connections 
+            are vital to maintaining the quality of the data for all users. While 
+            such communciations could overburden traditional control systems, the Qoonet 
+            architecture is immune from this.
         div.col-md-5
           img.featurette-image.img-fluid.mx-auto(data-src="holder.js/400x400/auto", alt="Generic placeholder image")
