Contact page added

--- a/views/layout_main.pug
+++ b/views/layout_main.pug
@@ -5,6 +5,9 @@ html
     meta(name="viewport", content="width=device-width, initial-scale=1, shrink-to-fit=no")
     title Qoonet: Take control
     link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css')
+    link(rel='stylesheet', href='stylesheets/contacts.css')
+    link(rel='stylesheet', href='stylesheets/carousel.css')
+    script(defer, src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous")
       
   body
     block content
