--- a/views/header_footer_main.pug
+++ b/views/header_footer_main.pug
@@ -11,11 +11,11 @@ block content
           li.nav-item
             a.nav-link(href="/") Home
           li.nav-item
-            a.nav-link(href="#") Read more
+            a.nav-link(href="read_more") Read more
           li.nav-item
             a.nav-link(href="#") Features
           li.nav-item
-            a.nav-link(href="#") Contact
+            a.nav-link(href="contact") Contact
 
   block main_content
 
