Getting ready for a tutorial page

--- a/views/header_footer_main.pug
+++ b/views/header_footer_main.pug
@@ -15,6 +15,8 @@ block content
           li.nav-item
             a.nav-link(href="#") Features
           li.nav-item
+            a.nav-link(href="#") Tutorial
+          li.nav-item
             a.nav-link(href="contact") Contact
 
   block main_content
