--- a/views/layout_front.pug
+++ b/views/layout_front.pug
@@ -3,7 +3,7 @@ html
   head
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1, shrink-to-fit=no")
-    title Qoonet
+    title Qoonet: Take control
     link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/cover.css')
       
