Contact page finished

--- a/views/contact.pug
+++ b/views/contact.pug
@@ -12,9 +12,10 @@ block main_content
       div.container
         h3.text-center.text-uppercase contact us
         p.text-center.w-75.m-auto.
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris 
-          interdum purus at sem ornare sodales. Morbi leo nulla, pharetra 
-          vel felis nec, ullamcorper condimentum quam.
+          We are an organisation whose primary tasks are maintenance and development 
+          of the Qoonet control architecture. Please use the following to get in 
+          touch.
+         
         div.row.justify-content-center
           div.col-sm-12.col-md-6.col-lg-3.my-5
             div.card.border-0
@@ -27,14 +28,14 @@ block main_content
             div.card.border-0
               div.card-body.text-center
                 i.fab.fa-github.fa-5x.mb-3(aria-hidden="true")
-                h4.text-uppercase.mb-5 source code
+                h4.text-uppercase.mb-5 projects
                 p
                   a(href='https://github.com/QooNet') https://github.com/QooNet
           div.col-sm-12.col-md-6.col-lg-3.my-5
             div.card.border-0
               div.card-body.text-center
                 i.fa.fa-map-marker.fa-5x.mb-3(aria-hidden="true")
-                h4.text-uppercase.mb-5 real-world location
+                h4.text-uppercase.mb-5 real-world
                 address Lund, Sweden
           div.col-sm-12.col-md-6.col-lg-3.my-5
             div.card.border-0
