Empty files for features and tutorial pages

--- a/views/header_footer_front.pug
+++ b/views/header_footer_front.pug
@@ -8,8 +8,8 @@ block content
         nav.nav.nav-masthead.justify-content-center
           a.nav-link(href="/") Home
           a.nav-link(href="read_more") Read More
-          a.nav-link(href="#") Features
-          a.nav-link(href="#") Tutorial
+          a.nav-link(href="features") Features
+          a.nav-link(href="tutorial") Tutorial
           a.nav-link(href="contact") Contact
 
     block main_content
