--- a/views/header_footer_main.pug
+++ b/views/header_footer_main.pug
@@ -13,9 +13,9 @@ block content
           li.nav-item
             a.nav-link(href="read_more") Read more
           li.nav-item
-            a.nav-link(href="#") Features
+            a.nav-link(href="features") Features
           li.nav-item
-            a.nav-link(href="#") Tutorial
+            a.nav-link(href="tutorial") Tutorial
           li.nav-item
             a.nav-link(href="contact") Contact
 
