--- a/views/layout_front.pug
+++ b/views/layout_front.pug
@@ -4,6 +4,7 @@ html
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1, shrink-to-fit=no")
     title Qoonet: Take control
+    link(rel="shortcut icon", href="/images/QooNet.ico")
     link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/cover.css')
       
