Started adding tutorials

--- a/views/header_footer_main.pug
+++ b/views/header_footer_main.pug
@@ -15,9 +15,16 @@ block content
           li.nav-item
             a.nav-link(href="features") Features
           li.nav-item
-            a.nav-link(href="tutorial") Tutorial
+            a.nav-link(href="tutorial") Tutorials
           li.nav-item
             a.nav-link(href="contact") Contact
+
+
+  main(role="main")
+    div.jumbotron.jumbotron-fluid
+      div.container
+        h1.display-4 Qoonet
+        p.lead An Open Source IoT Control System
 
   block main_content
 
