--- a/views/tutorial.pug
+++ b/views/tutorial.pug
@@ -1,3 +1,34 @@
 extends header_footer_main
 
-block main_content 
+block main_content
+  div.container
+    div.row
+      div.col-sm
+        div.card
+          img.card-img-top(src="..." alt="Card image cap")
+          div.card-body
+            h5.card-title Card title
+            p.card-text.
+              Some quick example text to build on the card title and make up the bulk 
+              of the card's content.
+            a.btn.btn-primary(href="#") Go somewhere
+
+      div.col-sm
+        div.card
+          img.card-img-top(src="..." alt="Card image cap")
+          div.card-body
+            h5.card-title Card title
+            p.card-text.
+              Some quick example text to build on the card title and make up the bulk 
+              of the card's content.
+            a.btn.btn-primary(href="#") Go somewhere
+
+      div.col-sm
+        div.card
+          img.card-img-top(src="..." alt="Card image cap")
+          div.card-body
+            h5.card-title Card title
+            p.card-text.
+              Some quick example text to build on the card title and make up the bulk 
+              of the card's content.
+            a.btn.btn-primary(href="#") Go somewhere
