--- a/views/header_footer_front.pug
+++ b/views/header_footer_front.pug
@@ -9,7 +9,7 @@ block content
           a.nav-link(href="/") Home
           a.nav-link(href="read_more") Read More
           a.nav-link(href="features") Features
-          a.nav-link(href="tutorial") Tutorial
+          a.nav-link(href="tutorial") Tutorials
           a.nav-link(href="contact") Contact
 
     block main_content
