First tutorial card ready

--- a/views/tutorial.pug
+++ b/views/tutorial.pug
@@ -5,12 +5,14 @@ block main_content
     div.row
       div.col-sm
         div.card
-          img.card-img-top(src="..." alt="Card image cap")
+          h3.card-header Setting up
+          img.card-img-top(src="images/beagleboneblack.jpg" alt="BeagleBone Black")
           div.card-body
-            h5.card-title Card title
+            h5.card-title Prep a BeagleBone Black for QooNet
             p.card-text.
-              Some quick example text to build on the card title and make up the bulk 
-              of the card's content.
+              A freshly unboxed BeagleBone Black takes a little bit of work to 
+              make it ready for use. In this tutorial we walk you through the steps
+              you need to take.
             a.btn.btn-primary(href="#") Go somewhere
 
       div.col-sm
