A 2nd tutorial card added

--- a/views/tutorial.pug
+++ b/views/tutorial.pug
@@ -13,17 +13,19 @@ block main_content
               A freshly unboxed BeagleBone Black takes a little bit of work to 
               make it ready for use. In this tutorial we walk you through the steps
               you need to take.
-            a.btn.btn-primary(href="#") Go somewhere
+            a.btn.btn-primary(href="#") Read Tutorial
 
       div.col-sm
         div.card
-          img.card-img-top(src="..." alt="Card image cap")
+          h3.card-header Setting up
+          img.card-img-top(src="images/shiftrio.png" alt="Shiftr.io")
           div.card-body
-            h5.card-title Card title
+            h5.card-title MQTT with shiftr.io
             p.card-text.
-              Some quick example text to build on the card title and make up the bulk 
-              of the card's content.
-            a.btn.btn-primary(href="#") Go somewhere
+              QooNet uses MQTT as the communications layer. An awesome cloud-based 
+              solution for this is #[a(href="https://shiftr.io/") shiftr.io]. In this 
+              tutorial we show you how to get it up and running.
+            a.btn.btn-primary(href="#") Read Tutorial
 
       div.col-sm
         div.card
