Starting the 3rd tutorial card

--- a/views/tutorial.pug
+++ b/views/tutorial.pug
@@ -6,7 +6,7 @@ block main_content
       div.col-sm
         div.card
           h3.card-header Setting up
-          img.card-img-top(src="images/beagleboneblack.jpg" alt="BeagleBone Black")
+          img.card-img-top(src="images/beagleboneblack.jpg", alt="BeagleBone Black")
           div.card-body
             h5.card-title Prep a BeagleBone Black for QooNet
             p.card-text.
@@ -18,7 +18,7 @@ block main_content
       div.col-sm
         div.card
           h3.card-header Setting up
-          img.card-img-top(src="images/shiftrio.png" alt="Shiftr.io")
+          img.card-img-top(src="images/shiftrio.png", alt="Shiftr.io")
           div.card-body
             h5.card-title MQTT with shiftr.io
             p.card-text.
@@ -29,9 +29,10 @@ block main_content
 
       div.col-sm
         div.card
-          img.card-img-top(src="..." alt="Card image cap")
+          h3.card-header Device control
+          img.card-img-top(src="images/node-red-hexagon.png", alt="NodeRed")
           div.card-body
-            h5.card-title Card title
+            h5.card-title QooNet controller on BeagleBone Black
             p.card-text.
               Some quick example text to build on the card title and make up the bulk 
               of the card's content.
