A 4th tutorial card

--- a/views/tutorial.pug
+++ b/views/tutorial.pug
@@ -29,11 +29,22 @@ block main_content
 
       div.col-sm
         div.card
+          h3.card-header A test device
+          img.card-img-top(src="images/demoBreadBoard.png", alt="Test device")
+          div.card-body
+            h5.card-title Test Device
+            p.card-text.
+              QooNet is for controlling hardware, so here we build a small test 
+              device to allow us to experiment with Qoonet's capabilities.
+            a.btn.btn-primary(href="#") Go somewhere
+
+      div.col-sm
+        div.card
           h3.card-header Device control
           img.card-img-top(src="images/node-red-hexagon.png", alt="NodeRed")
           div.card-body
             h5.card-title QooNet controller on BeagleBone Black
             p.card-text.
-              Some quick example text to build on the card title and make up the bulk 
-              of the card's content.
+              Building the Qoonet device controller. This is the first tutorial 
+              to use NodeRed.
             a.btn.btn-primary(href="#") Go somewhere
