Fixed button text in /tutorial

--- a/views/tutorial.pug
+++ b/views/tutorial.pug
@@ -36,7 +36,7 @@ block main_content
             p.card-text.
               QooNet is for controlling hardware, so here we build a small test 
               device to allow us to experiment with Qoonet's capabilities.
-            a.btn.btn-primary(href="#") Go somewhere
+            a.btn.btn-primary(href="#") Read Tutorial
 
       div.col-sm
         div.card
@@ -47,4 +47,4 @@ block main_content
             p.card-text.
               Building the Qoonet device controller. This is the first tutorial 
               to use NodeRed.
-            a.btn.btn-primary(href="#") Go somewhere
+            a.btn.btn-primary(href="#") Read Tutorial
