--- a/public/stylesheets/cover.css
+++ b/public/stylesheets/cover.css
@@ -6,7 +6,7 @@
 a,
 a:focus,
 a:hover {
-  color: #fff;
+  color: #808080;
 }
 
 /* Custom default button */
@@ -27,13 +27,13 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #2b2c3e;
+  background-color: #e9ecef;
 }
 
 body {
   display: -ms-flexbox;
   display: flex;
-  color: #fff;
+  color: #404040;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
@@ -57,7 +57,7 @@ body {
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: 700;
-  color: rgba(255, 255, 255, .5);
+  color: rgba(90, 90, 90, .5);
   background-color: transparent;
   border-bottom: .25rem solid transparent;
 }
@@ -102,5 +102,5 @@ body {
  * Footer
  */
 .mastfoot {
-  color: rgba(255, 255, 255, .5);
+  color: rgba(90, 90, 90, .5);
 }
