Using mixins and include properly

--- a/views/tutorial.pug
+++ b/views/tutorial.pug
@@ -1,5 +1,7 @@
 extends header_footer_main
 
+include includes/tutorial/mixin_newcard.pug
+
 block main_content
   div.container
     div.card-columns
