--- a/views/includes/tutorial/beaglebone_prep.pug
+++ b/views/includes/tutorial/beaglebone_prep.pug
@@ -1,10 +1,6 @@
-div.card
-  h3.card-header Setting up
-  img.card-img-top(src="images/beagleboneblack.jpg", alt="BeagleBone Black")
-  div.card-body
-    h5.card-title Prep a BeagleBone Black for QooNet
-    p.card-text.
-      A freshly unboxed BeagleBone Black takes a little bit of work to 
-      make it ready for use. In this tutorial we walk you through the steps
-      you need to take.
-    a.btn.btn-primary(href="#") Read Tutorial
++make_card(
+  'Setting up',
+  'Prep a BeagleBone Black for QooNet',
+  'A freshly unboxed BeagleBone Black takes a little bit of work to make it ready for use. In this tutorial we walk you through the steps you need to take.',
+  'images/beagleboneblack.jpg'
+  )
