--- a/views/includes/tutorial/shiftrio.pug
+++ b/views/includes/tutorial/shiftrio.pug
@@ -1,10 +1,6 @@
-div.card
-  h3.card-header Setting up
-  img.card-img-top(src="images/shiftrio.png", alt="Shiftr.io")
-  div.card-body
-    h5.card-title MQTT with shiftr.io
-    p.card-text.
-      QooNet uses MQTT as the communications layer. An awesome cloud-based 
-      solution for this is #[a(href="https://shiftr.io/") shiftr.io]. In this 
-      tutorial we show you how to get it up and running.
-    a.btn.btn-primary(href="#") Read Tutorial
++make_card(
+  'Setting up',
+  'MQTT with shiftr.io',
+  'QooNet uses MQTT as the communications layer. An awesome cloud-based solution for this is #[a(href="https://shiftr.io/") shiftr.io]. In this tutorial we show you how to get it up and running.',
+  'images/shiftrio.png'
+  )
