--- a/views/includes/tutorial/test_device.pug
+++ b/views/includes/tutorial/test_device.pug
@@ -1,9 +1,6 @@
-div.card
-  h3.card-header A test device
-  img.card-img-top(src="images/demoBreadBoard.png", alt="Test device")
-  div.card-body
-    h5.card-title Test Device
-    p.card-text.
-      QooNet is for controlling hardware, so here we build a small test 
-      device to allow us to experiment with Qoonet's capabilities.
-    a.btn.btn-primary(href="#") Read Tutorial
++make_card(
+  'A test device',
+  'Test Device',
+  'QooNet is for controlling hardware, so here we build a small test device to allow us to experiment with Qoonet\'s capabilities.',
+  'images/demoBreadBoard.png'
+  )
