Anchor tag not rendered with input to mixin

--- a/views/includes/tutorial/shiftrio.pug
+++ b/views/includes/tutorial/shiftrio.pug
@@ -1,6 +1,6 @@
 +make_card(
   'Setting up',
   'MQTT with shiftr.io',
-  'QooNet uses MQTT as the communications layer. An awesome cloud-based solution for this is #[a(href="https://shiftr.io/") shiftr.io]. In this tutorial we show you how to get it up and running.',
+  'QooNet uses MQTT as the communications layer. An awesome cloud-based solution for this is shiftr.io. In this tutorial we show you how to get it up and running.',
   'images/shiftrio.png'
   )
