New tutorial card added

--- a/views/tutorial.pug
+++ b/views/tutorial.pug
@@ -9,3 +9,4 @@ block main_content
       include includes/tutorial/shiftrio.pug
       include includes/tutorial/test_device.pug
       include includes/tutorial/nodered_controller.pug
+      include includes/tutorial/nodered_webapp.pug
