--- a/views/read_more.pug
+++ b/views/read_more.pug
@@ -1,42 +1,46 @@
 extends header_footer_main
 
+include includes/mixin_jumbotron.pug
+
 block main_content
-  div.container.marketing
-    div.row.featurette
-      div.col-md-7
-        h2.featurette-heading Unlocking digital controls
-        p.lead.
-          While standard systems for digital control have gravitated towards 
-          levels of complexity that require more and more specialised expertise, 
-          a revolution has been taking place. The capability of the Internet of 
-          Things has moved from theory to reality.
-        p.lead.
-          This potential has been ignored by the controls community. Until now.
-      div.col-md-5
-        img.featurette-image.img-fluid.mx-auto(data-src="holder.js/400x400/auto", alt="Generic placeholder image")
+  main(role="main")
+    +add_jumbotron
+    div.container.marketing
+      div.row.featurette
+        div.col-md-7
+          h2.featurette-heading Unlocking digital controls
+          p.lead.
+            While standard systems for digital control have gravitated towards 
+            levels of complexity that require more and more specialised expertise, 
+            a revolution has been taking place. The capability of the Internet of 
+            Things has moved from theory to reality.
+          p.lead.
+            This potential has been ignored by the controls community. Until now.
+        div.col-md-5
+          img.featurette-image.img-fluid.mx-auto(data-src="holder.js/400x400/auto", alt="Generic placeholder image")
 
-    hr.featurette-divider
+      hr.featurette-divider
 
-    div.row.featurette
-      div.col-md-7.order-md-2
-        h2.featurette-heading Standing on the shoulders of giants
-        p.lead.
-          Business models that depend on constant vendor interaction lead to 
-          poor quality systems. Qoonet is 100% open source. The code is yours 
-          to modify and optimise to your needs, and is accessible enough to 
-          make this a reality.
-      div.col-md-5
-        img.featurette-image.img-fluid.mx-auto(data-src="holder.js/400x400/auto", alt="Generic placeholder image")
+      div.row.featurette
+        div.col-md-7.order-md-2
+          h2.featurette-heading Standing on the shoulders of giants
+          p.lead.
+            Business models that depend on constant vendor interaction lead to 
+            poor quality systems. Qoonet is 100% open source. The code is yours 
+            to modify and optimise to your needs, and is accessible enough to 
+            make this a reality.
+        div.col-md-5
+          img.featurette-image.img-fluid.mx-auto(data-src="holder.js/400x400/auto", alt="Generic placeholder image")
 
-    hr.featurette-divider
+      hr.featurette-divider
 
-    div.row.featurette
-      div.col-md-7
-        h2.featurette-heading Real-time controls without overwhelming the system
-        p.lead.
-          With mobile control an expectation of modern systems, real-time connections 
-          are vital to maintaining the quality of the data for all users. While 
-          such communciations could overburden traditional control systems, the Qoonet 
-          architecture is immune from this.
-      div.col-md-5
-        img.featurette-image.img-fluid.mx-auto(data-src="holder.js/400x400/auto", alt="Generic placeholder image")
+      div.row.featurette
+        div.col-md-7
+          h2.featurette-heading Real-time controls without overwhelming the system
+          p.lead.
+            With mobile control an expectation of modern systems, real-time connections 
+            are vital to maintaining the quality of the data for all users. While 
+            such communciations could overburden traditional control systems, the Qoonet 
+            architecture is immune from this.
+        div.col-md-5
+          img.featurette-image.img-fluid.mx-auto(data-src="holder.js/400x400/auto", alt="Generic placeholder image")
