Jumbotron mixin accepts input

--- a/views/contact.pug
+++ b/views/contact.pug
@@ -4,7 +4,7 @@ include includes/mixin_jumbotron.pug
 
 block main_content
   main(role="main")
-    +add_jumbotron
+    +add_jumbotron('Contact')
     section(id="contact")
       div.container
         h3.text-center.text-uppercase contact us
