--- a/views/tutorial.pug
+++ b/views/tutorial.pug
@@ -5,7 +5,7 @@ include includes/mixin_jumbotron.pug
 
 block main_content
   main(role="main")
-    +add_jumbotron
+    +add_jumbotron('Tutorials')
     div.container
       div.card-columns
         include includes/tutorial/beaglebone_prep.pug
