--- a/views/read_more.pug
+++ b/views/read_more.pug
@@ -4,7 +4,7 @@ include includes/mixin_jumbotron.pug
 
 block main_content
   main(role="main")
-    +add_jumbotron
+    +add_jumbotron('Read More')
     div.container.marketing
       div.row.featurette
         div.col-md-7
