--- a/public/stylesheets/cover.css
+++ b/public/stylesheets/cover.css
@@ -34,7 +34,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   color: #404040;
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  text-shadow: 0 .005rem .01rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
@@ -57,7 +57,7 @@ body {
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: 700;
-  color: rgba(90, 90, 90, .5);
+  color: rgba(90, 90, 90, 1);
   background-color: transparent;
   border-bottom: .25rem solid transparent;
 }
