Proper pics for the readmore page

--- a/views/read_more.pug
+++ b/views/read_more.pug
@@ -17,7 +17,7 @@ block main_content
           p.lead.
             This potential has been ignored by the controls community. Until now.
         div.col-md-5
-          img.featurette-image.img-fluid.mx-auto(data-src="holder.js/400x400/auto", alt="Generic placeholder image")
+          img.featurette-image.img-fluid.mx-auto(src="images/BakeoutStatus.png", alt="Vacuum bakeout status")
 
       hr.featurette-divider
 
@@ -30,7 +30,7 @@ block main_content
             to modify and optimise to your needs, and is accessible enough to 
             make this a reality.
         div.col-md-5
-          img.featurette-image.img-fluid.mx-auto(data-src="holder.js/400x400/auto", alt="Generic placeholder image")
+          img.featurette-image.img-fluid.mx-auto(src="images/WindowInterlockFlow.png", alt="Node-red flow for a window comparator")
 
       hr.featurette-divider
 
@@ -43,4 +43,4 @@ block main_content
             such communciations could overburden traditional control systems, the Qoonet 
             architecture is immune from this.
         div.col-md-5
-          img.featurette-image.img-fluid.mx-auto(data-src="holder.js/400x400/auto", alt="Generic placeholder image")
+          img.featurette-image.img-fluid.mx-auto(src="images/PowerMeterHerokuDashboard.png", alt="Generic placeholder image")
