--- a/views/contact.pug
+++ b/views/contact.pug
@@ -20,7 +20,7 @@ block main_content
                 i.fas.fa-at.fa-5x.mb-3(aria-hidden="true")
                 h4.text-uppercase.mb-5 mail
                 p
-                  a(href='mailto:david.mcginnis@thequantumguys.se') david.mcginnis@thequantumguys.se
+                  a(href='mailto:info@thequantumguys.se') info@thequantumguys.se
           div.col-sm-12.col-md-6.col-lg-3.my-5
             div.card.border-0
               div.card-body.text-center
