--- a/views/read_more.pug
+++ b/views/read_more.pug
@@ -25,8 +25,8 @@ block main_content
         div.col-md-7.order-md-2
           h2.featurette-heading Standing on the shoulders of giants
           p.lead.
-            Business models that depend on constant vendor interaction lead to 
-            poor quality systems. Qoonet is 100% open source. The code is yours 
+            Business models that depend on constant vendor interaction lead to systems 
+            of poor quality. Qoonet is 100% open source. The code is yours 
             to modify and optimise to your needs, and is accessible enough to 
             make this a reality.
         div.col-md-5
