Source code link added

--- a/views/contact.pug
+++ b/views/contact.pug
@@ -31,13 +31,14 @@ block main_content
           div.col-sm-12.col-md-6.col-lg-3.my-5
             div.card.border-0
               div.card-body.text-center
-                i.fa.fa-map-marker.fa-5x.mb-3(aria-hidden="true")
-                h4.text-uppercase.mb-5 real-world
-                address Lund, Sweden
-          div.col-sm-12.col-md-6.col-lg-3.my-5
-            div.card.border-0
-              div.card-body.text-center
                 i.fa.fa-globe.fa-5x.mb-3(aria-hidden="true")
                 h4.text-uppercase.mb-5 web
                 p
                   a(href='http://qoonet.org') http://qoonet.org
+          div.col-sm-12.col-md-6.col-lg-3.my-5
+            div.card.border-0
+              div.card-body.text-center
+                i.fab.fa-github.fa-5x.mb-3(aria-hidden="true")
+                h4.text-uppercase.mb-5 source
+                p
+                  a(href='https://github.com/stevemolloy/website_for_qoo') Source code for this site
