--- a/views/contact.pug
+++ b/views/contact.pug
@@ -34,7 +34,7 @@ block main_content
                 i.fa.fa-globe.fa-5x.mb-3(aria-hidden="true")
                 h4.text-uppercase.mb-5 web
                 p
-                  a(href='http://qoonet.org') http://qoonet.org
+                  a(href='http://www.qoonet.org') http://www.qoonet.org
           div.col-sm-12.col-md-6.col-lg-3.my-5
             div.card.border-0
               div.card-body.text-center
