The cards are now links

--- a/views/includes/tutorial/nodered_controller.pug
+++ b/views/includes/tutorial/nodered_controller.pug
@@ -2,5 +2,6 @@
   'Device control',
   'QooNet controller on BeagleBone Black',
   'Building the Qoonet device controller. This is the first tutorial to use NodeRed.',
-  'images/node-red-hexagon.png'
+  'images/node-red-hexagon.png',
+  '#'
   )
