--- a/views/includes/tutorial/shiftrio.pug
+++ b/views/includes/tutorial/shiftrio.pug
@@ -2,5 +2,6 @@
   'Setting up',
   'MQTT with shiftr.io',
   'QooNet uses MQTT as the communications layer. An awesome cloud-based solution for this is shiftr.io. In this tutorial we show you how to get it up and running.',
-  'images/shiftrio.png'
+  'images/shiftrio.png',
+  '#'
   )
