--- a/views/includes/tutorial/test_device.pug
+++ b/views/includes/tutorial/test_device.pug
@@ -2,5 +2,6 @@
   'A test device',
   'Test Device',
   'QooNet is for controlling hardware, so here we build a small test device to allow us to experiment with Qoonet\'s capabilities.',
-  'images/demoBreadBoard.png'
+  'images/demoBreadBoard.png',
+  '#'
   )
