--- a/views/includes/tutorial/beaglebone_prep.pug
+++ b/views/includes/tutorial/beaglebone_prep.pug
@@ -2,5 +2,6 @@
   'Setting up',
   'Prep a BeagleBone Black for QooNet',
   'A freshly unboxed BeagleBone Black takes a little bit of work to make it ready for use. In this tutorial we walk you through the steps you need to take.',
-  'images/beagleboneblack.jpg'
+  'images/beagleboneblack.jpg',
+  '#'
   )
