--- a/views/includes/tutorial/mixin_newcard.pug
+++ b/views/includes/tutorial/mixin_newcard.pug
@@ -1,8 +1,8 @@
-mixin make_card(heading, title, maintext, imgfile)
-  div.card
+mixin make_card(heading, title, maintext, imgfile, urllink)
+  - var d = "location.href='" + urllink + "';"
+  div(onclick=d).card
     h3.card-header= heading
     img.card-img-top(src=imgfile, alt="NodeRed")
     div.card-body
       h5.card-title= title
       p.card-text= maintext
-      a.btn.btn-primary(href="#") Read Tutorial
