--- a/views/includes/tutorial/nodered_webapp.pug
+++ b/views/includes/tutorial/nodered_webapp.pug
@@ -2,5 +2,6 @@
   'A web application',
   'NodeRed Web App',
   'In this tutorial, we walk through the steps needed to build a web application for control of a Qoonet system.',
-  'images/ImportedWebAppFlow.png'
+  'images/ImportedWebAppFlow.png',
+  '#'
   )
